Fix right align city, state zipcode; Prepare for HTTPS; I wanted to make a commit to reference to before the HTTPS updates. I am going to make the site run full HTTPS from here on out. This should just be a matter of making sure magento doesn't generate any urls with the HTTP prefix, and always uses HTTPS; This will be the trickiest part. Beyond that, the process is really for consistancy (mainly in the focus of Google Indexing). Google has a pretty well defined process for this, and do a pretty good job of detailing the best practice. Which I assumed they would by now, given that it's becoming a very common thing to do, escpecially since they added it as a ranking factor. But this mainly is a process of informing google of the change. The biggest factor on my end is making sure that the urls they do have indexed have an HTTPS counter part, and the old URL (with the HTTPS) is correctly forwarded to the new address. So I have to make sure they all forward correctly, change over all the sitemaps with the HTTPS urls, make sure Magento isn't generating any HTTP urls, (which it tries to generate many URLS for you, and I have to make sure none of these are hard-coded to be HTTP, and that it doesn't attempt to use HTTP over HTTPS due to the lack of requirement (because HTTPS really isn't necessary, and magento tries to only use it were necessary, as, initially, HTTPS does create longer load times. But once that is thoroughly looked after, checked and double checked, and everything is properly forwarding, I will use Google's guidelines to complete the process and have them focus their attention (and re-index, which is understood by them will have to be a relatively quick and complete re-index) to the new URL (which to them is basically the same as a full URL change, even though we are just changing the protocol, HTTP to HTTPS).
Former-commit-id: 34fd399795fce15e6103d2c9bdbe87e1bdbde7b5

--- a/skin/frontend/default/rofcustom/css/update.css
+++ b/skin/frontend/default/rofcustom/css/update.css
@@ -489,6 +489,6 @@ html .product-view .box-up-sell .product-name, html .product-view .box-up-sell .
     /* Location Pages Style Updates (2014-12-12)
     **************************************************************************************/
 
-        body[class*='cms-locations'] .box-content p:nth-child(4) {
+        body[class*="cms-locations-"] p[itemprop="address"] {
             text-align: right;
         }
